# Robot2023

./: .gitignore  .gitmodules  Dockerfile  launch.sh
.github/workflows/: build.yml
src/grr_bringup/: CMakeLists.txt  package.xml  setup.py
src/grr_bringup/config/: camera_1_param.yaml  camera_2_param.yaml  controllers.yaml  hardware_map.yaml  servo_params.yaml
src/grr_bringup/launch/: bloodstone.launch.py  competition_robot.launch.py  imu.launch.py  isaac.launch.py  motor_controllers.launch.py  rviz.launch.py
src/grr_cmake_controller/: CMakeLists.txt
src/grr_cmake_controller/src/: grr_cmake_controller.cpp  odometry.cpp
src/grr_description/: CMakeLists.txt  bloodstone.urdf  package.xml
src/grr_guis/: package.xml  setup.cfg  setup.py
src/grr_guis/grr_guis/: main_gui.py
src/grr_hardware/: CMakeLists.txt  package.xml
src/grr_hardware/include/: I2C.h  backcolorsensor.h
src/grr_hardware/include/grr_hardware/: isaac_drive.hpp
src/grr_hardware/src/: I2C.cpp  backcolorsensor.cpp  colorsenseTest  isaac_drive.cpp  robot.cpp
src/grr_hardware_python/: package.xml  setup.cfg  setup.py
src/grr_hardware_python/grr_hardware_python/: robot.py
src/grr_interfaces/: CMakeLists.txt  package.xml
src/grr_interfaces/msg/: GrrLineArray.msg  LineArray.msg
src/grr_python_controllers/: setup.py
src/grr_python_controllers/grr_python_controllers/: action.py  grr_drive_train.py  state_machine.py  step_one.py  (+1 more)
src/grr_python_hardware/: package.xml  setup.cfg  setup.py
src/grr_state_machine/: cmd_vel_test.py  state_machine.py
src/grr_test/: package.xml  setup.py
(+23 files in other folders)
